--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -65,6 +65,9 @@ http {
         access_log    off;
         root /home/wwwroot;
         index index.html index.php;
+        if ( $query_string ~* ".*[\;'\<\>].*" ){
+                return 404;
+        }
         location ~ .*\.(php|php5)?$  {
         #fastcgi_pass  unix:/tmp/php-cgi.sock;
               fastcgi_pass  127.0.0.1:9000;
